# katrain

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.cron  Dockerfile.desktop  Dockerfile.web  ENGINE.md  GEMINI.md  INSTALL.md  README.md  docker-compose.db.yml  docker-compose.yml  migrate_db.py  pyproject.toml  requirements-cron.txt  requirements-desktop.txt  requirements-web.txt  requirements.txt  update_ai_translations.py  update_cancel_translations.py
.gemini/: settings.json
.github/workflows/: test_and_build.yaml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
data/life-n-death/: README.md  index.json
data/tutorials_published/: active.json
docs/database-info/: schema.md
docs/dual_engine/: PRD-katago-dual-engine.md  katago-request-api-plan.md
docs/end-game-notice/: IMPLEMENTATION_PLAN.md  PRD.md
docs/galaxy_module_intro/: 对弈模块介绍.txt  报告模块介绍.txt  死活棋模块介绍.txt  直播模块介绍.txt  研究模块介绍.txt
docs/human-model-support/: PRD.md  (+2 more)
frontend-design/: smart-board.pen
katago-configs/: analysis_config_cron.cfg  analysis_config_web.cfg
katrain/: __main__.py  config.json
scripts/: analyze_sgf_quality.py  backfill_analysis.py  batch_translate_galaxy.py  batch_translate_live.py  board_upgrade.sh  generate_tsumego_index.py  generate_voice.py  import_kifu.py  migrate_db.sql  migrate_upcoming.sql  recognize_boards_v2.py  sync_tsumego_db.py  test_qwen_translation.py
superpowers/: confirmed_requirements.md  open_questions.md  plan.md  risk_analysis.md
tests/: debug_stuck_stone.py  test_ai_resignation.py  test_galaxy_polish.py  test_http_engine.py  test_http_engine_subprocess.py  test_multi_player.py  test_real_katago_server.py  test_user_game_repo.py
(+3046 files in other folders)
