[project]
name = "KaTrain"
version = "1.17.1"
description = "Go/Baduk/Weiqi playing and teaching app with a variety of AIs"
authors = [{ name = "Sander Land" }]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "pygame~=2.0 ; platform_system == 'Darwin'",
    "screeninfo>=0.8.1,<0.9 ; platform_system != 'Darwin'",
    "chardet>=5.2.0,<6",
    "requests>=2.32.0",
    "docutils>=0.21.2",
    "ffpyplayer>=4.5.1",
    "urllib3>=2.2.2",
    "kivy>=2.3.1",
    "kivymd==0.104.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/sanderland/katrain"

[project.scripts]
katrain = "katrain.__main__:run_app"

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "polib>=1.2.0,<2",
    "pyinstaller>=6.14.1",
    "pytest>=8.3.2,<9",
    "tomli>=1.2.0 ; python_version < '3.11'",
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.black]
line-length = 120

[tool.hatch.build.targets.sdist]
include = ["katrain"]

[tool.hatch.build.targets.wheel]
include = ["katrain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
